test: add ContestInteractorTest